# counterfactual-on-ontologies-performance-evaluation

./: .gitignore  Pipfile  README.md  Readme.md  Specification.md  pyproject.toml
examples/: pizza.json  pizza.owl
src/: adapter.py  examples.py  main.py  output_analyzer.py  program.py  program_result.py
src/ceo/: adapter.py  graph.py  graph_generator.py  onto_utils.py
src/output_analyzers/: performance_analyzer.py  ranking_analyzer.py
src/performance_evaluation_ohmycthulhu/: adapter.py  examples.py  output_analyzer.py  performance_analyzer.py  program.py  program_result.py  ranking_analyzer.py
tests/ceo/: adapter.py  graph.py  graph_generator.py  main.py  onto_utils.py
tests/ceo/examples/: pizza.json  pizza.owl
