[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance_evaluation_ohmycthulhu"
version = "0.2.0"
authors = [
  { name="ohmycthulhu", email="elvin.bayramov@protonmail.com" },
]
description = "A package for evaluating counterfactual explanation testing for ontologies."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ohmycthulhu/counterfactual-on-ontologies-performance-evaluation"
"Bug Tracker" = "https://github.com/ohmycthulhu/counterfactual-on-ontologies-performance-evaluation/issues"
